update from depricated code in DocumentationService